added text to explain how to play

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 </html>
 <div id = Game>
+<p> Up, down, left, and right arrows to move up, down, left, and right. Space bar to shoot. A and S to turn. <p>
 
 
 <iframe allowtransparency="true" width="485" height="402" src="https://scratch.mit.edu/projects/embed/138635466/?autostart=false" frameborder="0" allowfullscreen></iframe>
